--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "chainlit>=2.5.5",
+    "google-generativeai>=0.8.5",
+    "openai>=1.82.0",
     "openai-agents>=0.0.16",
+    "python-dotenv>=1.1.0",
 ]
